force-app/main/default/objects/Form__c/Form__c.object-meta.xml
<CustomObject>
    <description>Forms designed by Salesforce Administrators.</description>
    <label>Clarity Form</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Clarity Forms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarity Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>