force-app/main/default/objects/Form__c/fields/Active_Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Active_Form_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Active Form Version</label>
    <referenceTo>Form_Version__c</referenceTo>
    <relationshipLabel>Clarity Forms</relationshipLabel>
    <relationshipName>Clarity_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>