force-app/main/default/objects/Form__c/fields/Checklist_Group__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Checklist Group</label>
    <referenceTo>Checklist_Group__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>