force-app/main/default/objects/Form__c/fields/Connected_Object__c.field-meta.xml
<CustomField>
    <fullName>Connected_Object__c</fullName>
    <label>Connected Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>