force-app/main/default/objects/Form__c/fields/Multi_Page__c.field-meta.xml
<CustomField>
    <fullName>Multi_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Page</label>
    <type>Checkbox</type>
</CustomField>