force-app/main/default/objects/Form__c/fields/Multi_Page_Info__c.field-meta.xml
<CustomField>
    <fullName>Multi_Page_Info__c</fullName>
    <defaultValue>&quot;[]&quot;</defaultValue>
    <label>Multi Page Info</label>
    <type>TextArea</type>
</CustomField>