force-app/main/default/objects/Form__c/fields/Multi_Page_Val__c.field-meta.xml
<CustomField>
    <fullName>Multi_Page_Val__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Page Val</label>
    <type>Checkbox</type>
</CustomField>