force-app/main/default/objects/Form__c/fields/Responses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Responses_Completed__c</fullName>
    <label>Responses Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>