force-app/main/default/objects/Form__c/fields/Responses_Started__c.field-meta.xml
<CustomField>
    <fullName>Responses_Started__c</fullName>
    <label>Responses Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>