force-app/main/default/objects/Form__c/fields/Thank_You_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Redirect__c</fullName>
    <label>Thank You Redirect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>